--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,15 @@
 [versions]
 agp = "8.7.3"
-kotlin = "1.8.21"
+kotlin = "2.0.21"
 kotlinCompose = "2.0.0"
 coreKtx = "1.15.0"
 ktor = "2.3.8"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-ktorClientCio = "3.1.0"
-ktorClientCore = "3.1.0"
+ktorClientCio = "2.3.8"
+ktorClientCore = "2.3.8"
+ktorClientPlugins = "2.3.8"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2025.03.00"
@@ -16,6 +17,7 @@ lifecycleRuntimeComposeAndroid = "2.8.7"
 navigationCompose = "2.8.9"
 roomCompiler = "2.6.1"
 roomRuntime = "2.6.1"
+roomKtx = "2.6.1"
 ui = "1.7.8"
 kotlinx-metadata-jvm = "0.7.0"
 
@@ -42,13 +44,16 @@ ktor-client-android = { group = "io.ktor", name = "ktor-client-android", version
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktorClientCio" }
 ktor-client-content-negotiation = { group = "io.ktor", name = "ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktorClientCore" }
+ktor-client-plugins = { module = "io.ktor:ktor-client-plugins", version.ref = "ktorClientPlugins" }
 ktor-serialization-kotlinx-json = { group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 kotlinx-metadata-jvm = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", version.ref = "kotlinx-metadata-jvm" }
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "roomKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlinCompose" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+
 
